# Gillsystems_uneff_your_rigs_messy_files

./: .gitignore  CONTRIBUTING.md  README.md  SHA256SUMS.txt  The_Commander_IDE_global_rule._set.md  architecture_design.md  config.toml  manifest.json  task_ledger.md  team_leader_directives.md  user_guide.md  version.py
.github/workflows/: build.yml
assets/: README-EXAMPLE.md
docs/: 7D_agile_process_with_SWEET_principles.md  design_team_analysis.md  proposed_changes.diff
rust-source/: Cargo.toml  build.rs  build_errors.txt
rust-source/proto/: agent_service.proto
rust-source/src/: boot_screen.rs  database.rs  file_scanner.rs  gui.rs  main.rs  smb_server.rs  uneff_program.rs
rust_agent_prototype/: Cargo.toml  build.rs
rust_agent_prototype/proto/: agent_service.proto
rust_agent_prototype/src/: agent.rs  config.rs  database.rs  file_scanner.rs  gui.rs  hashing.rs  main.rs  platform.rs  remediation.rs  service.rs
scan_logs/: scan_20260218_013550.json  scan_20260218_013550.md  scan_20260218_194302.json  scan_20260218_194302.md  scan_20260218_201408.json  scan_20260218_201408.md
uneff_source_rust_version/rust_agent_prototype/src/: agent.rs  platform.rs  service.rs
